############################################
# Changelog of the check_nwc_health plugin #
############################################

2014-01-02 3.4.2.2
- fix lsmpi_io for cisco asr1000 (Thanks Andreas Schulz)

2014-12-23 3.4.2.1
- use fallbacks to find fexes (cefexConfigTable may not be populated)

2014-12-16 3.4.2
- use cefexConfigTable for mode watch-fexes
- bugfix in cisco nexus sensors (had undef perl warnings)

2014-12-12 3.4.1
- bugfix in bluecoat hardware (skip perfdata of missing psus)

2014-12-11 3.4
- add vpn-status for cisco asa

2014-12-08 3.3
- add windowslocal

2014-12-06 3.2.2
- unique names for cisco cpus pointing to the same physical entity

2014-11-29 3.2.1
- remove unnecessary use statement
- finalize paloalto ha
- make list-interfaces and update-cache faster

2014-11-18 3.2.0.1
- hide some debug printfs

2014-11-10 3.2
- add palo alto hardware, sensors, ha
- make nexus cpu names unique

2014-11-02 3.1.1
- bugfix my-modes
- add paloaltomib

2014-09-26 3.1
- add Clavister Firewall (Thanks Dirk Goetz)
- fix GLPluginSNMP, all timeout-like errors are UNKNOWN
- allow warningx/criticalx to override cisco sensor thresholds

2014-09-55 3.0.4
- bugfix in glplugin (tmp-file-paths wrong under epn) (Thanks Sven Nierlein)

2014-09-15 3.0.3.9
- bugfix in bgp error states (Thanks Matthias Gallinger)
- bugfix in f5 pools (Thanks Sven Nierlein)

2014-08-28 3.0.3.8
- bugfix in interface-usage/ifspeed (Thanks Matthias Gallinger)

2014-08-26 3.0.3.7
- bugfix in glpluginsnmp (undef errors with loadbalacer index)

2014-08-25 3.0.3.6
- bugfix in glpluginsnmp / (fritzbox cpu undef-error)

2014-08-22 3.0.3.5
- bugfix in glplugin/uptime because of buggy snmpengineuptime

2014-08-21 3.0.3.4
- bugfix in glplugin/uptime thresholds

2014-08-21 3.0.3.3
- add a hack with --name2 which allows shortening of stupid interface names (make dmz1 from Adaptive Security Appliance 'dmz1' interface)

2014-08-20 3.0.3.2
- update GLPluginSNMP (timeout handling)

2014-08-20 3.0.3.1